# rustcox

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/rustcox-cli/: Cargo.toml
crates/rustcox-cli/src/: main.rs
crates/rustcox-cli/src/commands/: bench.rs  cells.rs  info.rs  kl.rs  mod.rs  selftest.rs  verify.rs
crates/rustcox-cli/tests/: cli.rs
crates/rustcox-core/: Cargo.toml
crates/rustcox-core/benches/: kl.rs
crates/rustcox-core/examples/: bruhat_invariance.rs  dump_cell1.rs  extremal_stats.rs  tcells_from_cells.rs
crates/rustcox-core/src/: bruhat.rs  cartan.rs  cartan_cyc.rs  cellgraph.rs  element.rs  enumerate.rs  group.rs  interval.rs  io.rs  laurent.rs  lib.rs  parabolic.rs  ring.rs  roots.rs  star.rs  wgraph.rs
crates/rustcox-core/src/interval/: tests.rs
crates/rustcox-core/src/kl/: cells.rs  checkpoint.rs  compute.rs  compute_uneq.rs  klcells.rs  mod.rs  parallel.rs  relkl.rs  relkl_ckpt.rs  relkl_recur.rs  relkl_save.rs  scc.rs  table.rs
crates/rustcox-core/src/ring/: cyc.rs  mod.rs
crates/rustcox-core/tests/: cells_golden.rs  cells_inner_resume.rs  cells_streaming.rs  golden_basics.rs  golden_kl.rs  parallel_eq.rs  relkl_ckpt.rs  relkl_induction.rs
crates/rustcox-core/tests/common/: mod.rs
docs/: BENCHMARKS.md  DESIGN.md  HPC.md  VERIFICATION.md
golden/: basics_A1.json  basics_A2.json  basics_A3.json  basics_A4.json  basics_A5.json  basics_B2.json  basics_B3.json  basics_B4.json  basics_C3.json  basics_D4.json  basics_D5.json  basics_E6.json  basics_F4.json  basics_G2.json  basics_H3.json  basics_H4.json  basics_I10.json  basics_I12.json  basics_I5.json  basics_I7.json  basics_I8.json  cells_A3.json  cells_A4.json  cells_B3.json  cells_B4.json  cells_D4.json  cells_F4.json  cells_H3.json  kl_A1_w1.json  kl_A2_w1.json  kl_A3_w1.json  kl_A4_w1.json  kl_B2_w0_1.json  kl_B2_w1.json  kl_B2_w1_2.json  (+14 more)
(+16 files in other folders)
