[workspace]
resolver = "2"
members = ["crates/rustcox-core", "crates/rustcox-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
repository = "https://github.com/jiajunma/rustcox"

[workspace.dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
proptest = "1"
criterion = "0.5"

[profile.release]
debug = true        # keep symbols for HPC profiling
