# NOTE: integration tests read ../../golden — not runnable from a published tarball
[package]
name = "rustcox-core"
description = "Kazhdan-Lusztig polynomials and cells for finite Coxeter groups (Rust port of PyCox)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "kl"
harness = false
